# nn-extractor

./: .gitignore  .gitmodules  LICENSE.txt  README.md  config.test.toml  config.tmpl.toml  fastapi.tmpl.env  pyproject.toml
.cc/module/{{cookiecutter.project}}/tests/{{cookiecutter.test_package_dir}}/: test_{{cookiecutter.module}}.py
.cc/project/{{cookiecutter.project}}/: pyproject.toml
nn_extractor/: __init__.py  _cfg.py  activation.py  activations.py  argparse.py  cfg.py  constants.py  hook.py  item.py  item_type.py  items.py  ndarray.py  nifti_utils.py  nii.py  nnextractor.py  nnextractor_pb2.py  nnnode.py  nnparameter.py  nnrecord.py  nntensor.py  parameter.py  primitive.py  profile.py  record.py  recursive_primitive.py  save_file.py  sequence.py  taskflow.py  types.py  utils.py
nn_extractor/cmds/: nnunetextractor.py
nn_extractor/examples/: data_iterators.py  default_preprocessor.py  export_prediction.py  nnunetextractor.py
nn_extractor/ops/: affine.py  base_op.py  crop.py  direction.py  flip.py  geo_identity.py  op_item.py  op_type.py  origin.py  pad.py  segmentation.py  spacing.py  utils.py
nn_extractor/server/: gen_openapi.py  init.py  meta.py  model.py  models.py  server.py  types.py
nn_extractor/server/handlers/: get_meta_handler.py  get_meta_list_handler.py  get_model_handler.py  get_model_list_handler.py  get_protobuf_handler.py
proto/: nnextractor.proto
scripts/: dev_server.sh  lint.sh  protoc.sh  run-nnunetextractor.sh  test.sh
tests/: test__cfg.py  test_activation.py  test_activations.py  test_argparse.py  test_cfg.py  test_constants.py  test_hook.py  test_item.py  test_item_type.py  test_items.py  test_ndarray.py  test_nifti_utils.py  test_nii.py  test_nnextractor.py  test_nnnode.py  test_nnparameter.py  test_nnrecord.py  test_nntensor.py  test_parameter.py  test_primitive.py  test_profile.py  test_record.py  test_recursive_primitive.py  test_save_file.py  test_sequence.py  test_types.py  test_utils.py
tests/test_cmds/: test_nnunetextractor.py
tests/test_examples/: test_data_iterators.py  test_default_preprocessor.py  test_nnunetextractor.py
tests/test_ops/: test_affine.py  test_base_op.py  test_crop.py  test_direction.py  test_flip.py  test_geo_identity.py  test_op_item.py  test_op_type.py  test_origin.py  test_pad.py  test_segmentation.py  test_spacing.py  test_utils.py
tests/test_server/: test_gen_openapi.py  test_init.py  test_meta.py  test_model.py  test_server.py  test_types.py
tests/test_server/test_handlers/: test_get_meta_handler.py  test_get_meta_list_handler.py  test_get_model_handler.py  test_get_model_list_handler.py  test_get_protobuf_handler.py
